# chesswrap

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: CMakeLists.txt  game_state.cpp  game_state.h  global.cpp  global.h  main.cpp  pieces.cpp  pieces.h
